Bug 292305 - Presence message isn't reset when controlling the presence through presence-applet
Summary: Presence message isn't reset when controlling the presence through presence-a...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: presence-applet (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-24 01:19 UTC by Elias Probst
Modified: 2013-04-11 11:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2012-01-24 01:19:36 UTC
When setting a custom presence message, it isn't reset again when setting another presence through the presence applet.

1. Set a custom presence like "Away" with the message "Lunchbreak" in contact-list
2. Set the presence "Online" in the presence applet

What happens:
→ The presence in contact-list is shown as "Online" (message: "Lunchbreak")
→ The tooltip of presence-applet shows "Lunchbreak" as current presence message

What should happen:
→ The presence message should be reset when setting another presence after having a custom presence message set
Comment 1 Martin Klapetek 2013-04-11 11:54:57 UTC
Git commit 1a665de67d0744f250c0b60f211f8e031c2e57a5 by Martin Klapetek.
Committed on 11/04/2013 at 13:54.
Pushed by mklapetek into branch 'kde-telepathy-0.6'.

Use status message from the passed presence

Right now we always take the status message of the current presence and
apply it to the selected presence from the plasmoid. With this it will
always use whatever status message is passed through the KTp::Presence.

Also makes it future-proof (tm) for when we implement custom status
messages for the plasmoid.

Reviewed-by: David Edmundson
FIXED-IN: 0.6.1

M  +1    -1    presence/src/presence-applet.cpp

http://commits.kde.org/telepathy-contact-applet/1a665de67d0744f250c0b60f211f8e031c2e57a5